# orleans-rust-client

./: .editorconfig  .gitignore  .gnostr-cloud-ci.yml  .gnostr-cloud-coverage.yml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  Directory.Build.props  LICENSE  Makefile  README.md  SECURITY.md  deny.toml  orleans-rust-client.slnx
.github/workflows/: ci.yml  release.yml
crates/orleans-rust-client/: Cargo.toml  README.md  build.rs
crates/orleans-rust-client/proto/: orleans_bridge.proto
crates/orleans-rust-client/src/: client.rs  config.rs  error.rs  generated.rs  grain.rs  key.rs  lib.rs  request_context.rs  retry.rs
crates/orleans-rust-codegen/: Cargo.toml  README.md
crates/orleans-rust-codegen/src/: lib.rs  main.rs
dotnet/OrleansRustBridge/: BridgeOptions.cs  Errors.cs  GrainInvokerRegistry.cs  GrainKeyParser.cs  JsonPayloadCodec.cs  OrleansBridgeService.cs  OrleansRustBridge.csproj  PayloadCodecRegistry.cs  ProtobufPayloadCodec.cs  ServiceCollectionExtensions.cs
dotnet/OrleansRustBridge.Abstractions/: BridgeAttributes.cs  BridgeErrorCodes.cs  BridgeException.cs  BridgeGrainKey.cs  BridgeInvocation.cs  GrainContractManifest.cs  IBridgeGrainInvoker.cs  IPayloadCodec.cs  OrleansRustBridge.Abstractions.csproj  OrleansRustManifest.cs
dotnet/OrleansRustBridge.Tests/: BridgeGrainKeyTests.cs  BridgeInvocationTests.cs  CoverageEdgeTests.cs  ErrorsClassificationTests.cs  ErrorsTests.cs  GrainKeyParserTests.cs  MapEndpointTests.cs  OrleansBridgeServiceTests.cs  OrleansRustBridge.Tests.csproj  PayloadCodecTests.cs  PocoTests.cs  RegistryAndManifestTests.cs  ServiceCollectionExtensionsTests.cs
dotnet/OrleansRustBridge.Tools/: GrainReflection.cs  InvokerGenerator.cs  OrleansRustBridge.Tools.csproj  Program.cs
examples/counter/: README.md
examples/counter/dotnet/Counter.Abstractions/: Counter.Abstractions.csproj  ICounterGrain.cs
examples/counter/dotnet/Counter.Bridge/: Counter.Bridge.csproj  CounterGrainInvoker.cs  KeyedGrainInvokers.cs  Program.cs  TlsSetup.cs
examples/counter/dotnet/Counter.Silo/: Counter.Silo.csproj  CounterGrain.cs  Program.cs
examples/counter/proto/: counter_messages.proto
examples/counter/rust/: Cargo.toml  build.rs  orleans-manifest.json
examples/counter/rust/src/: main.rs
proto/: orleans_bridge.proto
scripts/: cobertura_summary.py  gen-proto.sh
scripts/ci/: coverage-run.sh
tests/integration/: Cargo.toml  build.rs
tests/integration/src/: lib.rs
tests/integration/tests/: client_rpc.rs  e2e.rs  grain_ref.rs  retry.rs
