[package]
name = "orleans-rust-client"
description = "Rust client bindings for Microsoft Orleans services via an official .NET gRPC bridge."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
readme = "README.md"
documentation = "https://docs.rs/orleans-rust-client"
keywords = ["orleans", "grpc", "actor", "rpc", "client"]
categories = ["network-programming", "asynchronous"]
include = ["src/**/*.rs", "build.rs", "proto/**/*.proto", "README.md"]

[features]
default = ["json"]
json = ["dep:serde", "dep:serde_json"]
# Opaque protobuf payloads: callers supply already-encoded bytes.
protobuf = []
# Transport security for the gRPC channel (custom CA, mTLS, public roots).
tls = ["tonic/tls", "tonic/tls-webpki-roots"]

[dependencies]
bytes.workspace = true
prost.workspace = true
thiserror.workspace = true
tonic.workspace = true
tracing.workspace = true
tokio = { workspace = true, features = ["time"] }
uuid.workspace = true
serde = { workspace = true, optional = true }
serde_json = { workspace = true, optional = true }

[build-dependencies]
tonic-build.workspace = true
protoc-bin-vendored = "3"

[dev-dependencies]
serde = { workspace = true }
serde_json.workspace = true
tokio = { workspace = true, features = ["rt-multi-thread", "macros", "time"] }

# Build docs with every feature (TLS, protobuf) on docs.rs.
[package.metadata.docs.rs]
all-features = true
