[package]
name = "orleans-rust-codegen"
description = "Manifest-driven generator for typed orleans-rust-client grain clients."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
keywords = ["orleans", "codegen", "grpc"]
categories = ["development-tools"]

[[bin]]
name = "orleans-rust-codegen"
path = "src/main.rs"

[lib]
name = "orleans_rust_codegen"
path = "src/lib.rs"

[dependencies]
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
heck.workspace = true
clap.workspace = true
